Fix overflow of bookmark and history

--- a/src/renderer/App/components/Bookmarks/style.scss
+++ b/src/renderer/App/components/Bookmarks/style.scss
@@ -37,6 +37,7 @@
 
       .Bookmarks__item-text {
         flex-grow: 1;
+        overflow: hidden;
 
         .Bookmarks__item-name {
           font-weight: bold;
